cmake_minimum_required(VERSION 3.20.0)
project(ecg_filt_demo)
set(CMAKE_CXX_STANDARD 17)
include_directories(..)
if(NOT CMAKE_BUILD_TYPE AND NOT CMAKE_CONFIGURATION_TYPES)
  set(CMAKE_BUILD_TYPE "RelWithDebInfo")
endif()
find_package(iir REQUIRED)

add_executable(eeg_ecg_filter eeg_ecg_filter.cpp)
target_link_libraries(eeg_ecg_filter dnf iir::iir)
